# movie-data-project

./: __main__.py  pyproject.toml
movie_data_project/controllers/: provider_controller.py  validation_controller.py
movie_data_project/services/: fetch_api_service.py
tests/: __init__.py
